fix(mui): make tabs readable

--- a/src/components/QuantityInput/QuantityInput.sass
+++ b/src/components/QuantityInput/QuantityInput.sass
@@ -8,7 +8,7 @@
       margin-left: 1em
 
   .quantity
-    line-height: 2.4em
+    line-height: 2.8em
 
   .MuiInput-root
     max-width: 75px
